Interfaced back-end

--- a/app/src/main/java/live/cibc/shoppinganalytics/recommender/history.properties
+++ b/app/src/main/java/live/cibc/shoppinganalytics/recommender/history.properties
@@ -7,4 +7,12 @@
 6=Cineplex Entertainment 13.50
 7=Starbucks Dining 13.50
 8=Starbucks Dining 13.50
+8=TheKeg Dining 13.50
+8=McDonalds Dining 13.50
+8=WholeFoods Food 13.50
+8=Sobeys Food 13.50
+8=NoFrills Food 13.50
 9=HomeDepot Other 13.50
+9=Esso Other 13.50
+9=Staples Other 13.50
+10=TIcketmaster Entertainment 13.50
